# QOR

./: LICENSE  README.md
brain/knowledge/: predicates.tsv
dna/: index.json
dna/ceo/: README.md  ceo.json  ceo.md  ceo.qor  knowledge.txt  rules.qor  system_prompt.txt
dna/cfo/: README.md  cfo.json  cfo.md  cfo.qor  knowledge.txt  rules.qor  system_prompt.txt
dna/cto/: README.md  cto.json  cto.md  cto.qor  knowledge.txt  rules.qor  system_prompt.txt
dna/data_scientist/: README.md  data_scientist.json  data_scientist.md  data_scientist.qor  knowledge.txt  rules.qor  system_prompt.txt
dna/doctor_gp/: README.md  doctor_gp.json  doctor_gp.md  doctor_gp.qor  knowledge.txt  rules.qor  system_prompt.txt
dna/electrical_engineer/: README.md  electrical_engineer.json  electrical_engineer.md  electrical_engineer.qor  knowledge.txt  rules.qor  system_prompt.txt
dna/influencer/: README.md  influencer.json  influencer.md  influencer.qor  knowledge.txt  rules.qor  system_prompt.txt
dna/lawyer/: README.md  knowledge.txt  lawyer.json  lawyer.md  lawyer.qor  rules.qor  system_prompt.txt
dna/physicist/: README.md  knowledge.txt  physicist.json  physicist.md  physicist.qor  rules.qor  system_prompt.txt
dna/president/: README.md  knowledge.txt  president.json  president.md  president.qor  rules.qor  system_prompt.txt
dna/puzzle_solver/: agent.qor  arcade.qor  arcade_memory.qor  dna.json  game_rules.json  game_rules.json.bak  game_rules_backup.json  identity.qor  knowledge.txt  puzzle_solver.json  rules.qor  strategy.qor  system_prompt.txt  templates.qor  web_fallback.qor
dna/software_engineer/: README.md  knowledge.txt  rules.qor  (+4 more)
meta/: README.md  agi.qor  astronomy_earth.qor  biology.qor  bridge.qor  chemistry.qor  classify.qor  computer_science.qor  general.qor  genesis.qor  math.qor  perception.qor  physics.qor  reasoning.qor  sanskrit.qor  vedic_science.qor
qor-agent/: AGENT.md  Cargo.toml  README.md
qor-agent/src/: act.rs  browser.rs  learn.rs  main.rs  page.rs  perceive.rs  types.rs
qor-agent/tests/: arc_100.rs  arc_train_eval.rs  debug_017.rs  web_fallback.rs  web_flow_e2e.rs
qor-bridge/: Cargo.toml  README.md
qor-bridge/src/: context.rs  csv_ingest.rs  detect.rs  dharmic.rs  dna.rs  grid.rs  json.rs  kb_build.rs  kv.rs  language.rs  learn.rs  lib.rs  llguidance.rs  memory_graph.rs  oeis.rs  parquet_ingest.rs  perceive.rs  sanitize.rs  solve.rs  template.rs  text.rs  text_hint.rs  web_fetch.rs  web_rules.rs  web_search.rs
qor-bridge/tests/: real_data.rs  web_integration.rs
qor-cli/: Cargo.toml  README.md
qor-cli/src/: main.rs
qor-core/: Cargo.toml  README.md
qor-inference/: Cargo.toml  README.md
qor-py/: Cargo.toml  README.md
qor-py/src/: lib.rs
qor-runtime/: Cargo.toml  README.md
qor-runtime/src/: chain.rs  egraph.rs  eval.rs  heartbeat.rs  invent.rs  kb.rs  lib.rs  library.rs  memory.rs  mutate.rs  persistent_store.rs  search.rs  sleep.rs  store.rs  stratify.rs  stream.rs
(+25 files in other folders)
