[package]
name = "qor-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NeuronStore and evaluator for QORlang"

[features]
default = ["datafrog"]
async = ["tokio"]
persistent = ["im"]
datafrog = ["dep:datafrog"]

[dependencies]
qor-core = { path = "../qor-core" }
roaring = "0.10"
rayon = "1.10"
ahash = "0.8"
im = { version = "15", optional = true }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"], optional = true }
datafrog = { version = "2.0", optional = true }
rand = "0.8"
petgraph = "0.6"
egg = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "rt-multi-thread"] }
